force-app/main/default/objects/ServiceContract/fields/Adjusted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Quantity__c</fullName>
    <label>Adjusted Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>