force-app/main/default/objects/ServiceContract/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <label>Allocated Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>