force-app/main/default/objects/ServiceContract/fields/CM_Master_Number__c.field-meta.xml
<CustomField>
    <fullName>CM_Master_Number__c</fullName>
    <externalId>true</externalId>
    <label>CM Master Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>