force-app/main/default/objects/ServiceContract/fields/CM_Master_Number_Parent__c.field-meta.xml
<CustomField>
    <fullName>CM_Master_Number_Parent__c</fullName>
    <description>CM Master Number (Parent)</description>
    <formula>ParentServiceContract.CM_Master_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CM Master Number (Parent)</inlineHelpText>
    <label>CM Master Number (Parent)</label>
    <type>Text</type>
</CustomField>