force-app/main/default/objects/ServiceContract/fields/Contracted_Quantity_MAX__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity_MAX__c</fullName>
    <label>Contracted Quantity MAX</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>