force-app/main/default/objects/ServiceContract/fields/Contracted_Quantity_MIN__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity_MIN__c</fullName>
    <label>Contracted Quantity MIN</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>