force-app/main/default/objects/ServiceContract/fields/Contracted_Quantity_UoM__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity_UoM__c</fullName>
    <label>Contracted Quantity UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L15</fullName>
            </value>
            <value>
                <fullName>M15</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>