force-app/main/default/objects/ServiceContract/fields/Current_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Current_Fulfilment__c</fullName>
    <description>Current Fulfilment in %</description>
    <formula>IF(Shifted_Quantity__c = 0 ,0, Lifted_Quantity__c / Shifted_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Fulfilment in %</inlineHelpText>
    <label>Current Fulfilment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>