force-app/main/default/objects/ServiceContract/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer Name</description>
    <externalId>true</externalId>
    <inlineHelpText>Customer Name, defined as external id to speed up reporting via index</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>