force-app/main/default/objects/ServiceContract/fields/Ext_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_Customer_ID__c</fullName>
    <description>SAP Customer ID</description>
    <formula>ParentServiceContract.Account.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SAP Customer ID</inlineHelpText>
    <label>Ext Customer ID</label>
    <type>Text</type>
</CustomField>