force-app/main/default/objects/ServiceContract/fields/Forecasted_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Fulfilment__c</fullName>
    <description>Forecasted Fulfilment in %</description>
    <formula>IF(Region__c = 1,
IF(Contracted_Quantity__c =0,0, Forecasted_Quantity__c/Contracted_Quantity__c),
IF(Shifted_Quantity__c =0,0, Forecasted_Quantity__c/Shifted_Quantity__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecasted Fulfilment in %</inlineHelpText>
    <label>Forecasted Fulfilment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>