force-app/main/default/objects/ServiceContract/fields/Forecasted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Quantity__c</fullName>
    <formula>IF( Is_current_month__c,
			if(OR(ISBLANK(Work_Days_Excl_Holiday_Till_Today__c), Work_Days_Excl_Holiday_Till_Today__c = 0), Allocated_Quantity__c,
			(Allocated_Quantity__c/Work_Days_Excl_Holiday_Till_Today__c) * Work_Days_Excl_Holiday_This_Month__c ),
			IF(MONTH(Posting_Period__c) &lt; MONTH(TODAY()), Allocated_Quantity__c, Contracted_Quantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>