force-app/main/default/objects/ServiceContract/fields/Is_CM_Master__c.field-meta.xml
<CustomField>
    <fullName>Is_CM_Master__c</fullName>
    <description>Indicates if this Service Contract Master (Parent)?</description>
    <formula>IF(ISBLANK(Posting_Period__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this Service Contract Master (Parent)?</inlineHelpText>
    <label>Is CM Master?</label>
    <type>Checkbox</type>
</CustomField>