force-app/main/default/objects/ServiceContract/fields/Is_current_month__c.field-meta.xml
<CustomField>
    <fullName>Is_current_month__c</fullName>
    <formula>AND(MONTH(Posting_Period__c) = MONTH(TODAY()), YEAR(Posting_Period__c) = YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is current month?</label>
    <type>Checkbox</type>
</CustomField>