force-app/main/default/objects/ServiceContract/fields/Is_Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Master Contract</label>
    <type>Checkbox</type>
</CustomField>