force-app/main/default/objects/ServiceContract/fields/Lifted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Lifted_Quantity__c</fullName>
    <label>Lifted Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>