force-app/main/default/objects/ServiceContract/fields/Line_Item_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Line Item Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>