force-app/main/default/objects/ServiceContract/fields/Minus_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Minus_Tolerance__c</fullName>
    <label>Minus Tolerance in %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>