force-app/main/default/objects/ServiceContract/fields/Open_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Open_Quantity__c</fullName>
    <label>Open Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>