force-app/main/default/objects/ServiceContract/fields/Parent_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Parent_Penalty__c</fullName>
    <description>Parent Service Contract Penalty</description>
    <formula>ParentServiceContract.Penalty_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Service Contract Penalty</inlineHelpText>
    <label>Parent Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>