force-app/main/default/objects/ServiceContract/fields/Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount__c</fullName>
    <label>Penalty Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>