force-app/main/default/objects/ServiceContract/fields/Penalty_UoM__c.field-meta.xml
<CustomField>
    <fullName>Penalty_UoM__c</fullName>
    <label>Penalty UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KGV</fullName>
            </value>
            <value>
                <fullName>L15</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>M15</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>