force-app/main/default/objects/ServiceContract/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD01</fullName>
            </value>
            <value>
                <fullName>AD02</fullName>
            </value>
            <value>
                <fullName>AD03</fullName>
            </value>
            <value>
                <fullName>AD04</fullName>
            </value>
            <value>
                <fullName>AD05</fullName>
            </value>
            <value>
                <fullName>AD06</fullName>
            </value>
            <value>
                <fullName>AD07</fullName>
            </value>
            <value>
                <fullName>AD10</fullName>
            </value>
            <value>
                <fullName>AD11</fullName>
            </value>
            <value>
                <fullName>AD12</fullName>
            </value>
            <value>
                <fullName>AD18</fullName>
            </value>
            <value>
                <fullName>AD20</fullName>
            </value>
            <value>
                <fullName>AD38</fullName>
            </value>
            <value>
                <fullName>AD50</fullName>
            </value>
            <value>
                <fullName>AD51</fullName>
            </value>
            <value>
                <fullName>AD52</fullName>
            </value>
            <value>
                <fullName>AD58</fullName>
            </value>
            <value>
                <fullName>AD61</fullName>
            </value>
            <value>
                <fullName>ADA1</fullName>
            </value>
            <value>
                <fullName>ADA7</fullName>
            </value>
            <value>
                <fullName>ADB3</fullName>
            </value>
            <value>
                <fullName>ADB5</fullName>
            </value>
            <value>
                <fullName>ADB6</fullName>
            </value>
            <value>
                <fullName>ADB7</fullName>
            </value>
            <value>
                <fullName>ADB9</fullName>
            </value>
            <value>
                <fullName>ADH2</fullName>
            </value>
            <value>
                <fullName>ADH3</fullName>
            </value>
            <value>
                <fullName>CD01</fullName>
            </value>
            <value>
                <fullName>CD02</fullName>
            </value>
            <value>
                <fullName>CD05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>