force-app/main/default/objects/ServiceContract/fields/Plus_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Plus_Tolerance__c</fullName>
    <label>Plus Tolerance in %</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>