force-app/main/default/objects/ServiceContract/fields/Posting_Period__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period__c</fullName>
    <label>Posting Period</label>
    <type>Date</type>
</CustomField>