force-app/main/default/objects/ServiceContract/fields/Product_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Group__c</fullName>
    <label>Product Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>HEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>