force-app/main/default/objects/ServiceContract/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>DKF</fullName>
            </value>
            <value>
                <fullName>DKP</fullName>
            </value>
            <value>
                <fullName>DKP_BIO</fullName>
            </value>
            <value>
                <fullName>EUR_ASF</fullName>
            </value>
            <value>
                <fullName>EUR_BIO</fullName>
            </value>
            <value>
                <fullName>EUR_E10</fullName>
            </value>
            <value>
                <fullName>EUR_PURE</fullName>
            </value>
            <value>
                <fullName>HEL</fullName>
            </value>
            <value>
                <fullName>SADK</fullName>
            </value>
            <value>
                <fullName>SU+</fullName>
            </value>
            <value>
                <fullName>SU100</fullName>
            </value>
            <value>
                <fullName>VIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>