force-app/main/default/objects/ServiceContract/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>If country AT or DE or SI  value is 0 (WEST), otherwise 1</description>
    <formula>IF((ISPICKVAL(ATP_VSOP_Region__c, &quot;AT&quot;)) || (ISPICKVAL(ATP_VSOP_Region__c , &quot;DE&quot;)) || (ISPICKVAL(ATP_VSOP_Region__c , &quot;SI&quot;)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If country AT or DE or SI  value is 0 (WEST), otherwise 1</inlineHelpText>
    <label>Region</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>