force-app/main/default/objects/ServiceContract/fields/Send_Fulfillment_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Fulfillment_Email__c</fullName>
    <formula>AND( Is_current_month__c , DAY(TODAY()) &gt;= 15,Current_Fulfilment__c &lt; 51, ParentServiceContract.Account.ExternalId__c = &apos;123418&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Fulfillment Email</label>
    <type>Checkbox</type>
</CustomField>