force-app/main/default/objects/ServiceContract/fields/SF_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Customer_ID__c</fullName>
    <description>SF Customer ID</description>
    <formula>Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SF Customer ID</inlineHelpText>
    <label>SF Customer ID</label>
    <type>Text</type>
</CustomField>