force-app/main/default/objects/ServiceContract/fields/Shifted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shifted_Quantity__c</fullName>
    <label>Shifted Quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>