force-app/main/default/objects/ServiceContract/fields/Work_Days_Excl_Holiday_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Work_Days_Excl_Holiday_This_Month__c</fullName>
    <label>Work Days Excl Holiday This Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>