force-app/main/default/objects/ServiceContract/fields/Work_Days_Excl_Holiday_Till_Today__c.field-meta.xml
<CustomField>
    <fullName>Work_Days_Excl_Holiday_Till_Today__c</fullName>
    <label>Work Days Excl Holiday Till Today</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>