force-app/main/default/objects/ServiceContract/recordTypes/FPS_Bor_Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>FPS_Bor_Service_Contract</fullName>
    <active>true</active>
    <description>Service Contract record type that targets FPS Borealis POC Service Contracts</description>
    <label>FPS Bor Service Contract</label>
</RecordType>