force-app/main/default/objects/ServiceContract/listViews/All_ServiceContracts.listView-meta.xml
<ListView>
    <fullName>All_ServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CM_Master_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER.NAME</columns>
    <columns>Penalty_Amount__c</columns>
    <columns>Penalty_Interval__c</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Contracts</label>
</ListView>