force-app/main/default/objects/ServiceContract/listViews/Current_mont_children.listView-meta.xml
<ListView>
    <fullName>Current_mont_children</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.PARENTSERVICECONTRACT</columns>
    <columns>Shifted_Quantity__c</columns>
    <columns>Allocated_Quantity__c</columns>
    <columns>Contracted_Quantity__c</columns>
    <columns>Contracted_Quantity_MAX__c</columns>
    <columns>Contracted_Quantity_MIN__c</columns>
    <columns>Lifted_Quantity__c</columns>
    <columns>Open_Quantity__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Category_Group__c</columns>
    <columns>Storage__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.PARENTSERVICECONTRACT</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Is_current_month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current month children</label>
</ListView>