force-app/main/default/objects/ServiceContract/listViews/Empty_APO_Product.listView-meta.xml
<ListView>
    <fullName>Empty_APO_Product</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CM_Master_Number_Parent__c</columns>
    <columns>Product_Group__c</columns>
    <columns>CM_Master_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Empty APO Product</label>
</ListView>