force-app/main/default/objects/ServiceContract/listViews/Empty_Source_of_Suply.listView-meta.xml
<ListView>
    <fullName>Empty_Source_of_Suply</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Storage__c</field>
        <operation>equals</operation>
    </filters>
    <label>Empty Source of Suply</label>
</ListView>