force-app/main/default/objects/ServiceContract/listViews/Line_Items.listView-meta.xml
<ListView>
    <fullName>Line_Items</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.PARENTSERVICECONTRACT</columns>
    <columns>Shifted_Quantity__c</columns>
    <columns>Allocated_Quantity__c</columns>
    <columns>Contracted_Quantity__c</columns>
    <columns>Contracted_Quantity_MAX__c</columns>
    <columns>Contracted_Quantity_MIN__c</columns>
    <columns>Lifted_Quantity__c</columns>
    <columns>Open_Quantity__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Category_Group__c</columns>
    <columns>Storage__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>OWNER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.PARENTSERVICECONTRACT</field>
        <operation>notEqual</operation>
    </filters>
    <label>Line Items</label>
</ListView>