force-app/main/default/objects/ServiceContract/listViews/Master_Items.listView-meta.xml
<ListView>
    <fullName>Master_Items</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CM_Master_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Penalty_Amount__c</columns>
    <columns>Penalty_Interval__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>Storage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.PARENTSERVICECONTRACT</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CM_Master_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Master Items</label>
</ListView>